--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body{
 outline: 1px solid red;
 } */
 .bg-image{
-    background-image: url('../src/common/--bg.jpg');
+    background-image: url('../public/common/--bg.jpg');
     background-size: cover;
     z-index: -1;
     position: absolute;
@@ -42,14 +42,13 @@ outline: 1px solid red;
 .content{
     display: flex;
     width: 100vw;
-    height: 78vh;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.733) !important;
     opacity: 1;
     margin-top: 60px;
     margin-bottom: 0 !important;
     overflow: hidden;
     position: relative;
-    padding: 30px 0;
     border-top: 5px solid rgba(117, 117, 117, 0.247);
     border-bottom: 5px solid rgba(117, 117, 117, 0.247);
     animation: fadeIn 3s ease-out forwards;
@@ -62,7 +61,6 @@ outline: 1px solid red;
 }
 .content-abilities{
     margin-top: 4%;
-    margin-bottom: 2%;
 }
 .handler-pages{
     justify-content: end;
@@ -77,7 +75,7 @@ outline: 1px solid red;
         justify-content: center !important;
        padding: 20px 20px;
     }
-    .content{margin-top: 65px; padding: 0 20px !important; height: auto;}
+    .content{margin-top: 65px; padding: 0 20px !important; height: 100%;}
     .photo { width:100% !important;margin-top: 10px; margin-bottom: 20px; min-width: none !important; ;}
     .btn-menu-main{
         font-size: 0.75em !important;
@@ -98,6 +96,7 @@ outline: 1px solid red;
         left: 0 !important;
         justify-content: center !important;
         margin-top: 50% !important;
+        margin-bottom: 5%;
     }
     .content-aboutMe{
         flex-direction: column;
@@ -117,7 +116,7 @@ outline: 1px solid red;
     .project-header{
         width: 70% !important;
         justify-content: space-between;
-        margin-top: 3rem;
+        margin-top: 2rem;
     }
 }
 .aboutMe-info{
