--- a/public/style.css
+++ b/public/style.css
@@ -100,6 +100,8 @@ outline: 1px solid red;
     }
     .content-aboutMe{
         flex-direction: column;
+        width: 100% !important;
+        justify-content: center;
     }
     .aboutMe-info{
         padding: 0 !important;
@@ -108,6 +110,7 @@ outline: 1px solid red;
     .aboutMe-text {
         padding: 0 !important;
         margin: 0 !important;
+        text-align: justify !important;
     }
     .content-project{
         flex-direction: column !important;
@@ -193,6 +196,7 @@ outline: 1px solid red;
 }
 .last-update{
     color: rgba(255, 255, 255, 0.308);
+    font-size: 0.80em;
 }
 
 .box-icon-skill,.box-icon-project{
