--- a/public/style.css
+++ b/public/style.css
@@ -87,7 +87,7 @@ outline: 1px solid red;
     }
     .content-abilities{
         flex-direction: column;
-        margin: 50px 0 !important;
+        margin: 30px 0 !important;
     }
     .content-icon-abilities{
         width: 90% !important;
@@ -95,7 +95,7 @@ outline: 1px solid red;
     .handler-pages{
         left: 0 !important;
         justify-content: center !important;
-        margin-top: 20% !important;
+        margin-top: 0 !important;
         margin-bottom: 5%;
     }
     .content-aboutMe{
